# trading-system

./: .coverage  .env.example  .gitignore  .importlinter.toml  .importlinter.yaml  README.md  REPORT.md  REPORT.template.md  WO-006-FINAL-REPORT.md  WO-008a-FINAL-REPORT.md  WO-008a-R-FINAL-REPORT.md  WO-008a-R2-FINAL-REPORT.md  WO-008a-R3-FINAL-REPORT.md  WO-008a-R5-FINAL-REPORT.txt  WO-008a-R6-FINAL-REPORT.txt  WO-008b-B-RERUN-FINAL-REPORT.md  WO-013-FINAL-REPORT.md  WO-013-FOLLOWUP-123-REPORT.md  WO-013-FOLLOWUP-ABC-REPORT.md  WO-014c-2-FINAL-REPORT.md  WO-014c-3-FINAL-REPORT.md  WO-015-FINAL-REPORT.md  WO-016-D27-REPORT.md  WO-016-D28-REPORT.md  WO-016-D29-REPORT.md  WO-016-FINAL-REPORT.md  WO-017-FINAL-REPORT.md  WO-017-FOLLOWUP-REPORT.md  WO-018-DEAD-LIVE-SPLIT-REPORT.md  WO-018-FINAL-REPORT.md  WO-018-FOLLOWUP-ABCD-REPORT.md  WO-019-REPORT.md  WO-020-REPORT.md  WO-021-REPORT.md  WO-022-REPORT.md  WO-023-2B-REPORT.md  WO-023-2C-REPORT.md  WO-023-FOUNDATION-REPORT.md  WO-024-PASS1-REPORT.md  WO-025-REPORT.md  (+14 more)
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
config/: mean_cycle_baselines.json  settings.py
docs/: open-cleanup.md  speckit-sprint1-runbook.md  sprint1-spec.reference.md  standing-rules.md
docs/decisions/: 2026-07-14-kraken-data-channel-question.md  2026-07-14-venue-retirement-bybit-adopt-kraken.md  2026-07-19-adapter-registry-pattern.md  2026-07-19-boundary-break-at-head.md  2026-07-19-cost-fork-and-vocabulary-in-use.md  2026-07-19-f811-caught-a-class-duplication.md  2026-07-19-fabrication-path-third-look-alive-artifact.md  2026-07-19-fix-induced-regression-caught-before-shipping.md  2026-07-19-fixing-after-seeing-the-number.md  2026-07-19-fixtures-shaped-to-implementation.md  2026-07-19-fr018a-sequence-versus-reality.md  2026-07-19-guard-surfaces-and-denominators.md  2026-07-19-instrument-pointed-at-wrong-tree.md  2026-07-19-malformed-config-evaluates-zero-contracts.md  2026-07-19-research-claims-are-load-bearing.md  2026-07-19-the-fixture-was-more-correct-than-reality.md  2026-07-20-discrimination-instruments.md  2026-07-20-evidence-type-sovereignty.md  2026-07-20-reconnect-never-worked-in-production.md  2026-07-21-baselines-attract-scope-errors.md  2026-07-21-certification-bounded-by-fixture-content.md  2026-07-21-contract-clean-is-not-principle-clean.md  2026-07-21-declared-constant-portable-as-what-measured-on.md  2026-07-21-execution-reached-not-worked.md  2026-07-21-gappiness-metric-measured-itself.md  2026-07-21-gappiness-partition-failed-on-its-own-numbers.md  2026-07-21-orders-that-operate-what-they-should-build.md  2026-07-21-structural-satisfaction-retires-the-defect-class.md  2026-07-21-survives-the-failure-it-documents.md  2026-07-21-threshold-declaration-completeness.md  2026-07-22-a-check-is-bounded-by-the-form-it-matches.md  2026-07-22-declared-implies-producible-no-exemptions.md  2026-07-22-instrument-competence.md  2026-07-22-interpreter-is-a-scope-dimension.md  2026-07-22-verification-steps-can-host-the-defect.md  2026-07-23-a-guard-can-audit-the-object-model.md  2026-07-23-a-ruling-about-a-seam-must-be-written-against-its-consumers.md  2026-07-23-a-verdict-inherits-its-instrument-s-coverage.md  2026-07-23-an-environment-is-strict-along-axes.md  2026-07-23-the-exception-must-be-requested-by-name.md  (+3 more)
evidence/QUARANTINE-WO-008b-A-FABRICATED/: README.md  credential_scan.txt  no_silent_fixture_fallback.txt  path_identity.txt  preflight_guards.txt  safety_machinery.txt
evidence/WO-008a-R2/: blocker_3_answers.txt  counters_divergence.txt  counters_message_semantics.txt  counters_passthrough.txt  end_to_end_cycle.txt  git_status.txt  item_4_1_finding.txt  rate_reporting_both_branches.txt  settings_diff.txt  settings_log.txt  xpass_cleared.txt
evidence/WO-008a-R3/: end_to_end_full_cycle.txt  final_tests.txt  post_push_log.txt  post_push_status.txt  pre_commit_log.txt  pre_commit_status.txt  secret_scan.txt  staged_files.txt  t036_tests.txt
evidence/WO-008a-R4/: FINAL_REPORT.txt  cost_bite_proof.txt  demo_cycle.py  diagnosis.txt  end_to_end_with_costs.txt  frozen_architecture_notes.txt  runtime_analysis.txt  test_durations.txt
evidence/WO-008a-R5/: FINAL_REPORT.txt  bypass_scan_after.txt  bypass_scan_before.txt  ci_status_report.txt  cost_bite_proof.txt  current_log.txt  end_to_end_with_costs.txt  final_tests.txt  frozen_invariant_proof.txt
evidence/WO-008a-R6/: FINAL_REPORT.txt  double_count_bite_proof.txt  double_count_diagnosis.txt  end_to_end_final.txt  final_tests.txt  final_tests_clean.txt  git_log.txt  import_linter_clean.txt  staleness_guard_bite_proof.txt
evidence/WO-008b-A1/: blocking_defects_resolved.txt  checksum_ordering.txt  linter.txt  mainnet_guard_real_bite_proof.txt  mock_removal_fr017.txt  preflight_tests.txt  raw_frame_rewire.txt  test_count_delta.txt  test_order_dependence_finding.txt  tests.txt  venue_mode_observability.txt
evidence/WO-008b-A1b/: fabricated_data_reachability.txt  order_dependence_scan.txt  run_seed_12345.txt  run_seed_24680.txt  run_seed_97531.txt  tests.txt  threshold_reachability_history.txt
evidence/WO-008b-A2/: captured_frames_fixture.txt  captured_frames_raw.json  contract_count.txt  no_silent_fallback.txt  preflight.txt  preflight_bite_proofs.txt  preflight_suite.txt  (+4 more)
tests/: test_backtest_costs.py  test_boundaries.py  test_captured_frames_a3_raw_text.py  test_captured_frames_ground_truth.py  test_data_adapters.py  test_parse_path.py  test_reason_code_vocabulary.py  test_redaction.py  test_risk.py  test_stub_lint.py
tools/: annotation_name_scan.py  containment_bite_proof.py  contract_count_check.py  emission_bite_proof.py  establish_mean_cycle_baseline.py  instrument_mismatch_bite_proof.py  preflight_path_check.py  producible_only_via_definition.py  replay_checksum_capture.py  snapshot_gate_ledger.py  vocabulary_enforcement_bite_proof.py  vocabulary_scan_bite_proof.py  wire_string_bite_proof.py
(+354 files in other folders)
