[project]
name = "trading-system"
version = "0.1.0"
description = "Systematic Crypto Trading System - Walking Skeleton"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=14.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "import-linter>=2.0.0",
    "ruff>=0.1.0",
    # WO-008b-A2 §1.3: randomized test ordering, for the order-dependence scan.
    # Deliberately NOT added to pytest.ini addopts — default and CI runs stay
    # deterministic; randomization is invoked explicitly with -p randomly.
    "pytest-randomly>=3.15.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 100
target-version = "py311"

# WO-009b §3: the quarantine directory holds FROZEN EVIDENCE — the fabricated
# WO-008b-A artifacts and the three spike test files, preserved verbatim because
# "the record of a false proof is itself evidence". They are not maintained code
# and MUST NOT be edited to satisfy a linter. Excluded from lint rather than
# corrected, which would destroy the record.
extend-exclude = ["evidence/QUARANTINE-WO-008b-A-FABRICATED"]

# WO-009 §4: redefinition detection via static analysis.
# `venue_name` and `get_diagnostic_counters` were each defined twice on
# KrakenV2BookAdapter, the later definition silently winning — so a live run and
# a fixture replay became indistinguishable in the decision log (Principle VIII).
# F811 catches duplicate methods AND duplicate @property definitions.
# Deliberately NOT an import-linter contract: that would change
# EXPECTED_CONTRACT_COUNT and is the wrong instrument for this defect class.
# Scoped to F811 only — this is a targeted guard, not a general lint rollout.
[tool.ruff.lint]
select = ["F811"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# Import-linter configuration (Constitutional Requirement IV: Layered Architecture)
[tool.importlinter]
root_package = "trading"
include_external_packages = true
contracts = [
    { type = "forbidden", name = "Forbidden ML in Risk Layer", source_modules = ["trading.risk"], forbidden_modules = ["torch", "tensorflow", "sklearn", "transformers"] },
    { type = "forbidden", name = "Forbidden Execution Adapters Imports", source_modules = ["trading.strategy", "trading.risk", "trading.data", "trading.backtest", "trading.loop"], forbidden_modules = ["trading.execution.adapters"] },
    { type = "forbidden", name = "Forbidden v2-book-checksum imports above adapter", source_modules = ["trading.strategy", "trading.risk", "trading.execution", "trading.backtest", "trading.loop"], forbidden_modules = ["trading.data.adapters.kraken_v2_book"] },
    # WO-010 §5.2: the ignore_imports exemption for
    # "trading.loop.live -> trading.data.adapters.factory" was REMOVED. It was
    # needed only because factory.py imported adapter modules directly. The
    # registry removes that edge, so the exemption is no longer required and
    # keeping it would preserve a mask we no longer need.
    { type = "forbidden", name = "Forbid loop from importing adapters directly", source_modules = ["trading.loop"], forbidden_modules = ["trading.data.adapters.kraken_public", "trading.data.adapters.kraken_v2_book", "trading.data.adapters.simulated_feed"] },
    # WO-010 §5.2: the registry is the SOLE adapter resolution path. No module
    # outside trading.data.adapters may import a concrete adapter module.
    { type = "forbidden", name = "Registry is the sole adapter resolution path", source_modules = ["trading.strategy", "trading.risk", "trading.execution", "trading.backtest", "trading.loop"], forbidden_modules = ["trading.data.adapters.kraken_public", "trading.data.adapters.kraken_v2_book", "trading.data.adapters.simulated_feed"] },
    # WO-010 §4 (rule 0.1c): no test doubles in production code.
    # `tests/` is outside the `trading` root package, so test directories are
    # exempt automatically. EXPECTED RED until WO-008b-A removes the committed
    # `from unittest.mock import Mock` at kraken_v2_book.py:22.
    { type = "forbidden", name = "No test doubles in production code", source_modules = ["trading"], forbidden_modules = ["unittest"] }
]
